# scopus_citations_tool

./: .gitignore  README.md  logger_config.py  main.py  pyproject.toml
cli/: __init__.py
scrappers/: __init__.py
scrappers/orcid/: __init__.py  common.py  scrapper.py
scrappers/scopus/: __init__.py  common.py  scrapper.py
src/scopus_citations_tool/: __main__.py
src/scopus_citations_tool/logger/: logger.py  logger_config.py
